install/automated/kubernetes/manifests/000-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openvk
  labels:
    kubernetes.io/metadata.name: openvk
